[package]
name = "cryptotui"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
description = "Real-time crypto market dashboard for the terminal — streaming indicators over Binance WebSocket"
license = "MIT"
readme = "README.md"
repository = "https://github.com/sprezzaturaa/cryptotui"
keywords = ["crypto", "tui", "trading", "indicators", "websocket"]
categories = ["command-line-utilities", "visualization"]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
approx = "0.5"

[lints.clippy]
panic = "warn"
todo = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
